<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FormsImovel2Fragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Insira algumas informações do imóvel:"
        android:textSize="16dp"/>


    <!-- Tipo de alocação -->
    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeText"
        android:layout_gravity="start">

    </TextView>

    <CheckBox
        android:id="@+id/cbTypeCasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/casa">
    </CheckBox>

    <CheckBox
        android:id="@+id/cbTypeAp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apartamento">

    </CheckBox>

    <CheckBox
        android:id="@+id/cbTypeRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/republica">
    </CheckBox>

    <!-- Qtd Quartos -->

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quartos"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/quartosDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Qtd Suites -->

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suites"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/suitesDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Qtd Banheiros -->

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/banheiros"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/banheirosDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Valor -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_valor"
        android:layout_marginBottom="16dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Condomínio -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCondominio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_condominio"
        android:layout_marginBottom="16dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCondominio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- IPTU -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutIptu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_iptu"
        android:layout_marginBottom="16dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextIptu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descricao"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:helperText="Fale mais sobre o Imóvel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/prontoButton"
        style="Color"/>

    </LinearLayout>
</ScrollView>