<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:elevation="7dp"
        android:focusable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="175dp">
                <ImageView
                    android:id="@+id/imovelImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/apartamento"
                    android:contentDescription="@string/image_apartamento" />

                <ImageButton
                    android:id="@+id/favIcon"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:contentDescription="@string/favorite_icon"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/star_outline_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/imovelTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_Imovel"
                    android:textAppearance="@style/titleCard"
                    android:lineSpacingExtra="1sp"
                    android:translationY="-0.62sp"
                    android:gravity="top"
                    android:layout_marginBottom="12sp"/>
                <TextView
                    android:id="@+id/imovelDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/exemple_text"
                    android:textAppearance="@style/descCard"
                    android:lineSpacingExtra="4sp"
                    android:translationY="-1.8sp"
                    android:gravity="top"
                    android:layout_marginBottom="4sp"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/rent_icon"
                            android:src="@drawable/home_outline_24" />
                        <TextView
                            android:id="@+id/imovelAluguel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/valorCard"
                            android:text="@string/value_exemple"
                            android:layout_marginStart="6sp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/condominio_icone"
                            android:src="@drawable/neighborhood_outline_24"
                            android:layout_marginStart="6sp"/>
                        <TextView
                            android:id="@+id/imovelCondominio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/valorCard"
                            android:text="@string/value_exemple"
                            android:layout_marginStart="6sp"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>