<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/perfil"
                android:textColor="@color/tertiary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/icone_perfil"
                    android:contentDescription="@string/icone_perfil" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_name"
                    android:textColor="@color/tertiary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="400dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/background_button"
                    android:drawableStart="@drawable/icone_conta"
                    android:drawableEnd="@drawable/icone_seta_direita"
                    android:drawablePadding="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="20dp"
                    android:text="@string/conta"
                    android:textAlignment="center"
                    android:textColor="@color/neutral"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="400dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_button"
                    android:drawableStart="@drawable/icone_anuncios"
                    android:drawableEnd="@drawable/icone_seta_direita"
                    android:drawablePadding="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="20dp"
                    android:text="@string/meus_anuncios"
                    android:textAlignment="center"
                    android:textColor="@color/neutral"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="400dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_button"
                    android:drawableStart="@drawable/icone_seguranca"
                    android:drawableEnd="@drawable/icone_seta_direita"
                    android:drawablePadding="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="20dp"
                    android:text="@string/seguranca"
                    android:textAlignment="center"
                    android:textColor="@color/neutral"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="400dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_button"
                    android:drawableStart="@drawable/icone_ajuda"
                    android:drawableEnd="@drawable/icone_seta_direita"
                    android:drawablePadding="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="20dp"
                    android:text="@string/ajuda"
                    android:textAlignment="center"
                    android:textColor="@color/neutral"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="400dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_button"
                    android:drawableStart="@drawable/icone_configs"
                    android:drawableEnd="@drawable/icone_seta_direita"
                    android:drawablePadding="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="20dp"
                    android:text="@string/configuraces"
                    android:textAlignment="center"
                    android:textColor="@color/neutral"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="400dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_button"
                    android:drawableStart="@drawable/icone_sair"
                    android:drawableEnd="@drawable/icone_seta_direita"
                    android:drawablePadding="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="20dp"
                    android:text="@string/sair"
                    android:textAlignment="center"
                    android:textColor="@color/neutral"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
